# PlotlyBrain

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
brad/: __init__.py  choropleth_render.py  scores.py
brad/app/: callbacks.py  layout.py
docs/: dashboard_usage.md  filtering_and_coloring.md  score_definitions.md
examples/: demo_API.ipynb  demo_building_geoJSON.ipynb  demo_notebook.ipynb
examples/ad_12mo/: AD21002-3_RefAtlasRegions.csv  AD21003-2_RefAtlasRegions.csv  AD21003-3_RefAtlasRegions.csv  AD21003_RefAtlasRegions.csv  AD21006-2_RefAtlasRegions.csv  AD21006-3_RefAtlasRegions.csv  AD21006_RefAtlasRegions.csv
examples/ad_dataset/: AD21002-2_RefAtlasRegions.csv  AD21002_RefAtlasRegions.csv  AD21005-2_RefAtlasRegions.csv  AD21005-3_RefAtlasRegions.csv  AD21005_RefAtlasRegions.csv  AD21012-2_RefAtlasRegions.csv  AD21012-3_RefAtlasRegions.csv  AD21012_RefAtlasRegions.csv  AD21013-2_RefAtlasRegions.csv  AD21013-3_RefAtlasRegions.csv  AD21013_RefAtlasRegions.csv  AD21014-3_RefAtlasRegions.csv  AD21014_RefAtlasRegions.csv  AD21015-2_RefAtlasRegions.csv  AD21015-3_RefAtlasRegions.csv  AD21015_RefAtlasRegions.csv  AD21016-2_RefAtlasRegions.csv  AD21016-3_RefAtlasRegions.csv  AD21016_RefAtlasRegions.csv  AD21017-2_RefAtlasRegions.csv  AD21017_RefAtlasRegions.csv  AD21035-2_RefAtlasRegions.csv  AD21035-3_RefAtlasRegions.csv  AD21035_RefAtlasRegions.csv  AD21036-2_RefAtlasRegions.csv  AD21036-3_RefAtlasRegions.csv  AD21036_RefAtlasRegions.csv  AD21037-2_RefAtlasRegions.csv  AD21037-3_RefAtlasRegions.csv  AD21037_RefAtlasRegions.csv  AD21050-2_RefAtlasRegions.csv  AD21050-3_RefAtlasRegions.csv  AD21050_RefAtlasRegions.csv  AD21051-2_RefAtlasRegions.csv  AD21051-3_RefAtlasRegions.csv  AD21051_RefAtlasRegions.csv  AD21052-2_RefAtlasRegions.csv  AD21052-3_RefAtlasRegions.csv  AD21052_RefAtlasRegions.csv  AD21053-2_RefAtlasRegions.csv  (+25 more)
examples/outputs/: rel_abundance_12m.csv  rel_abundance_3m.csv  rel_abundance_6m.csv  rel_abundance_9m.csv
geobrain/: __init__.py  __main__.py  build_geoJSON.py  choropleth_render.py  colormaps.py  coord_system.py  io.py  metadata.py  scores.py  types.py
geobrain/app/: __init__.py  __main__.py  cache.py  callbacks.py  figure.py  layout.py  server.py
geobrain/app/assets/: render.js  styles.css
plotlybrain/: __init__.py  __main__.py  allen_api.py  build_geoJSON.py  build_polygons.py  choropleth_render.py  coord-system.py  coord_system.py  io.py  map_scores.py  metadata.py  plotly_render.py  scores.py  types.py
plotlybrain/app/: __init__.py  __main__.py  callbacks.py  figure.py  layout.py  server.py
plotlybrain/app/assets/: render.js  styles.css
tests/: conftest.py  test_app_callbacks.py  test_build_geojson.py  test_callbacks_guards.py  test_callbacks_helpers.py  test_choropleth_render.py  test_coord_system.py  test_io.py  test_metadata.py  test_scaling.py  test_scores.py
