[build-system]
requires      = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "plotlybrain"
version = "0.1.0"
description = "placeholder"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "Anna Teruel-Sanchis", email = "anna.teruel@uv.es" },
    { name = "Konrad Danielewski", email = "k.danielewski@nencki.edu.pl" },
]
keywords = [ "neuroscience", "data-visualization", "data-analysis" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "ipykernel",
    "kaleido",
    "numpy",
    "plotly",
    "pandas",
    "scipy",
    "h5py",
    "requests",
    "pynrrd",
    "rasterio",
    "shapely",
    "scikit-image",
    "dash>=2.17",
    "dash-mantine-components>=0.14",
    "diskcache",
    "multiprocess",
    "psutil",
    "tqdm",
]

    [project.urls]
    Homepage = "https://github.com/anna-teruel/PlotlyBrain"
    Issues   = "https://github.com/anna-teruel/PlotlyBrain/issues"

    [project.scripts]
    plotlybrain-app = "plotlybrain.app.__main__:main"

[tool.setuptools]
include-package-data = true

    [tool.setuptools.packages.find]
    where      = [ "." ]
    include    = [ "plotlybrain*" ]
    namespaces = true

    [tool.setuptools.package-data]
    plotlybrain = [ "app/assets/*" ]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "selenium>=4.28",
    "beautifulsoup4",
    "percy-python-selenium",
    "dash-testing-stub",
    "requests",
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "-ra --headless"
markers = [
    "browser: dash.testing browser integration tests (launch headless Chrome)",
]

[tool.ruff]
line-length = 100

    [tool.ruff.format]
    quote-style  = "double"
    indent-style = "tab"

    docstring-code-format = true
