[build-system]
requires      = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "geobrain"
version = "0.1.0"
description = "placeholder"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "Anna Teruel-Sanchis", email = "anna.teruel@uv.es" },
    { name = "Konrad Danielewski", email = "k.danielewski@nencki.edu.pl" },
]
keywords = [ "neuroscience", "data-visualization", "data-analysis" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "ipykernel",
    "kaleido",
    "numpy",
    "plotly",
    "pandas",
    "scipy",
    "h5py",
    "requests",
    "pynrrd",
    "rasterio",
    "shapely",
    "scikit-image",
    "dash>=2.17",
    "dash-mantine-components>=0.14",
    "diskcache",
    "multiprocess",
    "psutil",
    "tqdm",
]

    [project.urls]
    Homepage = "https://github.com/anna-teruel/geobrain"
    Issues   = "https://github.com/anna-teruel/geobrain/issues"

    [project.scripts]
    geobrain = "geobrain.app.__main__:main"
    geobrain-app = "geobrain.app.__main__:main"

[tool.setuptools]
include-package-data = true

    [tool.setuptools.packages.find]
    where      = [ "." ]
    include    = [ "geobrain*" ]
    namespaces = true

    [tool.setuptools.package-data]
    geobrain = [ "app/assets/*" ]

[tool.ruff]
line-length = 100

    [tool.ruff.format]
    quote-style  = "double"
    indent-style = "tab"

    docstring-code-format = true

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "dash[testing]",
    "selenium",
]

dev = [
    "pre-commit",
    "ruff",
]
